--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@fortawesome/angular-fontawesome": "^0.10.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "angular-font-awesome": "^3.1.2",
+    "font-awesome": "^4.7.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
